[tool.poetry]
name = "leetcode"
version = "0.1.0"
description = "Решение задач с сайта leetcode.com на Python"
authors = ["aavojtek <aavojtek@mts.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^6.2.2"
pytest-cov = "^2.12.1"

[tool.poetry.dev-dependencies]
pre-commit = "^2.13.0"
flake8 = "^3.9.2"
mypy = "^0.910"
flake8-isort = "^4.0.0"
flake8-builtins = "^1.5.3"
pep8-naming = "^0.12.0"
flake8-bugbear = "^21.4.3"
flake8-eradicate = "^1.1.0"
flake8-import-order = "^0.18.1"
flake8-blind-except = "^0.2.0"
flake8-annotations-complexity = "^0.0.6"
flake8-comprehensions = "^3.5.0"
flake8-expression-complexity = "^0.0.9"
flake8-pytest = "^1.3"
flake8-return = "^1.1.3"
pylint = "^2.9.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
